syntax = "proto3";

package hello;

option go_package = "gly-hub/go-dandelion/quickgo/example/proto/gen;hello";

// HelloService 问候服务
service HelloService {
  // SayHello 简单问候
  rpc SayHello (HelloRequest) returns (HelloResponse);
  
  // SayHelloStream 流式问候（服务端流）
  rpc SayHelloStream (HelloRequest) returns (stream HelloResponse);
  
  // SayHelloClientStream 客户端流式问候
  rpc SayHelloClientStream (stream HelloRequest) returns (HelloResponse);
  
  // SayHelloBidiStream 双向流式问候
  rpc SayHelloBidiStream (stream HelloRequest) returns (stream HelloResponse);
}

// HelloRequest 问候请求
message HelloRequest {
  string name = 1;        // 姓名
  string message = 2;     // 消息内容
}

// HelloResponse 问候响应
message HelloResponse {
  string greeting = 1;    // 问候语
  string timestamp = 2;   // 时间戳
  int32 code = 3;         // 响应码
  string message = 4;     // 响应消息
}

